--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <div id="map"></div>
+
+
+<div class="panel">
+<input type="radio" name="base" value="amap" checked/> 高德
+<input type="radio" name="base" value="tdt" /> 天地图
